# albaretto

./: .gitignore  LICENSE  README.md  pyproject.toml
src/albaretto/: __init__.py
src/albaretto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/albaretto/common/: commands.py  subshell.py
src/albaretto/services/: google_drive.py  local_filesystem.py
