[project]
name = "albaretto"
version = "0.0.1"
description = "A DALL·E 2 image generation downloader. Permits easy upload to cloud services like Google Drive."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["dalle", "dalle2", "openai", "download", "drive", "save"]
authors = [
  {name = "Andrew Parsons", email = "parsonsandrew1@gmail.com"},
]
maintainers = [
  {name = "Andrew Parsons", email = "parsonsandrew1@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Natural Language :: English",
  "Topic :: Artistic Software",
  "Topic :: Games/Entertainment",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Archiving",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
